--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   },
   "require": {
-    "openclerk/events": "dev-master"
+    "openclerk/events": "^0.2"
   },
   "require-dev": {
     "phpunit/phpunit": ">=4.0",
